--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-auth-session": "~6.1.5",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-constants": "^17.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.4",
+    "expo-media-library": "~17.1.6",
     "expo-modules-core": "^2.3.13",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
@@ -46,17 +46,16 @@
     "react-native-elements": "3.4.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
-    "react-native-phone-number-input": "2.1.0",
     "react-native-qrcode-svg": "6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-uuid": "2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "0.20.0",
-    "yup": "1.6.1",
-    "expo-media-library": "~17.1.6"
+    "react-phone-number-input": "^3.4.12",
+    "yup": "1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
