--- a/package.json
+++ b/package.json
@@ -26,26 +26,37 @@
     "axios": "^1.9.0",
     "base-64": "1.0.0",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.9",
-    "expo-auth-session": "~6.1.5",
+    "expo": "53.0.10",
+    "expo-application": "~6.1.4",
+    "expo-auth-session": "~6.2.0",
+    "expo-build-properties": "^0.14.6",
+    "expo-camera": "~16.1.7",
     "expo-constants": "^17.1.6",
+    "expo-dev-client": "~5.2.0",
+    "expo-device": "~7.1.4",
+    "expo-firebase-core": "^6.0.0",
     "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "^14.1.4",
-    "expo-media-library": "~17.1.6",
-    "expo-modules-core": "^2.3.13",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-media-library": "~17.1.7",
+    "expo-modules-core": "~2.4.0",
+    "expo-notifications": "~0.31.3",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.7.1",
+    "i18next": "^25.2.1",
     "install": "^0.13.0",
     "moti": "0.30.0",
+    "onesignal-expo-plugin": "^2.0.3",
     "react": "19.0.0",
     "react-async-hook": "^4.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.56.3",
-    "react-native": "0.79.2",
+    "react-i18next": "^15.5.2",
+    "react-native": "0.79.3",
     "react-native-elements": "3.4.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
+    "react-native-onesignal": "^5.2.12",
     "react-native-qrcode-svg": "6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
