--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "0.20.0",
     "react-phone-number-input": "^3.4.12",
-    "yup": "1.6.1"
+    "yup": "1.6.1",
+    "expo-mail-composer": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
